GP: Changes in API to make internal update

Now, the internal data is recalculated when add or remove a point.

The change in the API affect to stroke.points.add() that now requires a datablock parameter. This parameter is required to identify the datablock affected.

For example:  stroke.points.add(gpencil, 1) instead of  stroke.points.add(1)

This is the second try to fix T59600